--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/03.id属性とclass属性/index.html"
+    "livePreview.defaultPreviewPath": "/08.角を丸めたり影を追加してみよう/index.html"
 }
